--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-hello world
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - Animated Christmas Card</title>
+  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; minimum-scale=1.0; user-scalable=no; target-densityDpi=device-dpi" /><link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+  hello world
+</body>
+  
+  </html>
